VAN-3047 Fixed the broken UI & created separate component for UDK

--- a/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-input-accessory/subpage-device-settings-input-accessory.component.scss
+++ b/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-input-accessory/subpage-device-settings-input-accessory.component.scss
@@ -5,59 +5,44 @@
     list-style-type: none;
     padding-bottom: 1rem;
   }
-
   .hidden-keyboard-text {
-    margin-left: 2rem;
     font-size: 1.5rem;
     color: $main_darker;
     padding-left: 2rem;
     padding-right: 2rem;
   }
-
   .keys-row {
     margin-top: 13px;
 
-    ul.list-group {
-      list-style-type: none;
-      padding-bottom: 1rem;
+    .caption-tittle {
+      color: #667481;
+      font-weight: bold;
+      font-size: 14px;
     }
-
-    .hidden-keyboard-text {
-      font-size: 1.5rem;
-      color: $main_darker;
-      padding-left: 2rem;
-      padding-right: 2rem;
-    }
-
-    .keys-row {
-      margin-top: 13px;
-
-      .caption-tittle {
-        color: #667481;
-        font-weight: bold;
-        font-size: 14px;
-      }
-    }
-
-    .img-preview {
-      background-size: 100% 100%;
+  }
+  .img-preview {
+    background-size: 100% 100%;
+    width: 100%;
+    min-height: 33vh;
+    height: auto;
+    margin-top: 1rem;
+    img {
       width: 100%;
-      min-height: 33vh;
-      height: auto;
-      margin-top: 1rem;
-
-      img {
-        width: 100%;
-        height: 100%;
-      }
+      height: 100%;
     }
-
-    .toggle-icon {
-      fa-icon {
-        color: #4579f0;
-        font-size: 2rem;
-      }
+  }
+  .toggle-icon {
+    fa-icon {
+      color: #4579f0;
+      font-size: 2rem;
     }
+  }
+
+  .udk-caption {
+    font-size: 1.5rem;
+    color: $main_darker;
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .inputSection {
@@ -76,23 +61,19 @@
     .dropdown-toggle::after {
       display: none;
     }
-
     .select-title {
       font-size: 1.2rem;
       font-weight: $weight_medium;
       text-transform: uppercase;
-      text-align: left;
       color: $shade;
       letter-spacing: 0;
       line-height: 13px;
     }
-
     .select-text {
       color: $shade_darker;
       font-size: 1.6rem;
       font-weight: $weight_light;
     }
-
     .button {
       text-transform: uppercase;
       height: 5rem;
@@ -120,47 +101,16 @@
         opacity: 0.5;
       }
     }
-
-    .submittedButton {
-      text-transform: uppercase;
-      height: 5rem;
-      line-height: 5rem;
-      border: none;
-      border-radius: 10rem;
-      background: $grey_light;
-      padding: 0 3rem;
-      color: $grey_dark;
-      font-size: 1.5rem;
-      letter-spacing: 0.1rem;
-      font-weight: $weight_600;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      cursor: pointer;
-      -webkit-appearance: initial;
-      max-width: 26rem;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      margin-top: 2rem;
-
-      &:disabled {
-        opacity: 0.5;
-      }
-    }
-
     .btn-block {
       button {
         padding: 0.5rem 1rem;
         height: 7rem;
-
         &.btn-outline-shadow {
           border: 1px solid $shade_lighter;
           border-radius: $border_radius_sm;
           background-color: $light;
           box-shadow: $drop_shadow;
         }
-
         .dropdown-icon {
           fa-icon {
             font-size: 2rem;
@@ -169,14 +119,11 @@
         }
       }
     }
-
     .dropdown-item {
       font-size: 1.6rem;
-
       &:hover {
         background: $main_lightest;
       }
-
       &.disabled {
         background: $shade_lightest;
         color: $shade;
@@ -211,17 +158,14 @@
 
       padding: 1rem;
       width: 100%;
-
       &:hover {
         outline: $dark;
       }
-
       &::placeholder {
         color: $shade_light;
         font-weight: $weight_medium;
       }
     }
-
     .note {
       border: 1px solid #ecf0f1;
       border-radius: 0.5rem;
@@ -230,7 +174,6 @@
       font-size: 1.6rem;
       margin-top: 1rem;
     }
-
     .user-defined-key-block {
       ::ng-deep .vtr-ui-switch-row .white-theme {
         border-bottom: none !important;
